fix safari bug (height carousel was stretched in compact size )

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -547,7 +547,7 @@
 .carousel-wrapper {
   width: 100%;
   display: flex;
-  height: var(--shape-xxxl);
+  height: 40vh;
   position: relative;
 }
 
