--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -67,6 +67,7 @@
 
   .carousel-wrapper {
     width: 75%;
+    height: 25vh;
   }
 
   .review-title {
